# projeto_inicial

./: README.md  main.py  pyproject.toml
space_invaders/: assets.py  entities.py  main.py  main_old.py  settings.py  utils.py
tests/: test_load_sound.py
